# game-of-life-cpp

./: CMakeLists.txt  LICENSE  README.md  test.sh
src/: main.cpp
